CHANGES-1.4.txt
---------------

CHANGES IN CUPS V1.4.1

	- DNS-SD registrations for raw queues had an empty "ty" key (STR #3299)
	- The JPEG and BMP MIME type rules were broken (STR #3284)
	- cupsGetNamedDest returned the default printer when the named
	  destination did not exist (STR #3285)


CHANGES IN CUPS V1.4.0

	- Localization updates (STR #3223, STR #3246, STR #3248, STR #3250)
	- Documentation updates (STR #3225, STR #3230, STR #3242, STR #3260)
	- The --with-pdftops configure option did not accept a full path to the
	  filter (STR #3278)
	- The banner filter did not position the back side image correctly
	  (STR #3277)
	- The dnssd backend could crash (STR #3272)
	- The 1284 device ID sometimes contained trailing garbage (STR #3266)
	- The USB backend returned different URIs for some printers than in
	  CUPS 1.3 (STR #3259)
	- The scheduler did not do local job-hold-until processing for remote
	  queues (STR #3258)
	- The scheduler did not try all possible SSL certificates on Mac OS X.
	- The scheduler did not always remove a file descriptor when using the
	  kqueue interface (STR #3256)
	- The scheduler did not protect against bad job control files in all
	  cases (STR #3253)
	- The scheduler did not encode "+" in model names (STR #3254)
	- The web interface didn't show the default options (STR #3244)
	- The IPP and LPD backends needed print data before they would do an
	  SNMP query.
	- Fixed a GNU TLS compatibility issue (STR #3231)
	- Fixed a HTML error in the add and modify printer web interface
	  templates (STR #3229)
	- The scheduler did not minimize the number of printer state events that
	  were generated by filter STATE: messages, which could lead to poor
	  performance.
	- The USB backend on Mac OS X did not cleanly cancel a job.
	- The network backends now set the connecting-to-device printer-state-
	  reasons value when looking up the address and copying the print data
	  for consistency.