@@ -2297,17 +2297,32 @@ cupsdSetJobState(
     case IPP_JOB_ABORTED :
     case IPP_JOB_CANCELED :
     case IPP_JOB_COMPLETED :
+        if (newstate == IPP_JOB_CANCELED)
+	{
+	 /*
+	  * Remove the job from the active list if there are no processes still
+	  * running for it...
+	  */
+
+	  for (i = 0; job->filters[i] < 0; i++);
+
+	  if (!job->filters[i] && job->backend <= 0)
+	    cupsArrayRemove(ActiveJobs, job);
+	}
+	else
+	{
+	 /*
+	  * Otherwise just remove the job from the active list immediately...
+	  */
+
+	  cupsArrayRemove(ActiveJobs, job);
+	}
+
        /*
         * Expire job subscriptions since the job is now "completed"...
 	*/
 
         cupsdExpireSubscriptions(NULL, job);
-
-       /*
-	* Remove the job from the active list...
-	*/
-
-	cupsArrayRemove(ActiveJobs, job);
 
 #ifdef __APPLE__
        /*
