@@ -7,6 +7,7 @@ CHANGES IN CUPS V1.4.1
 	- The JPEG and BMP MIME type rules were broken (STR #3284)
 	- cupsGetNamedDest returned the default printer when the named
 	  destination did not exist (STR #3285)
+	- The JobKillDelay was not triggered for canceled jobs (STR #3292)
 
 
 CHANGES IN CUPS V1.4.0
